# GitLit

./: .env  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
assets/scss/: auth.scss  home.scss  main.scss  new.scss  repo.scss
public/: auth.css  home.css  main.css  new.css  profile.css  repo.css
repos/test/test.git/refs/heads/: master
src/: api.rs  auth.rs  db.rs  errors.rs  git.rs  main.rs  repo.rs
src/api/: documentation.rs  handlers.rs  mod.rs  service.rs
src/db/: exporters.rs  helpers.rs  mod.rs  models.rs
src/db/mongo/: exporters.rs  helpers.rs  mod.rs  models.rs
src/db/mysql/: exporters.rs  helpers.rs  mod.rs
src/frontend/: auth.rs  errors.rs  index.rs  mod.rs  profile.rs  repo.rs
src/frontend/components/: alert.rs  body.rs  head.rs  header.rs  mod.rs
src/frontend/repo/: blob.rs  branches.rs  commits.rs  index.rs  mod.rs  new.rs  tree.rs  utils.rs
src/models/: api.rs  db.rs  mod.rs  repo.rs  repositories.rs  tokens.rs  users.rs
