[package]
name = "GitLit"
version = "0.1.0"
edition = "2024"
authors = ["adam-cakrda <cakrda@outlook.cz>"]
license = "MIT"
repository = "https://github.com/adam-cakrda/gitlit"
description = "A simple github alternative written in rust"
keywords = ["git", "http", "backend", "server", "github"]
readme = "README.md"
homepage = "https://github.com/adam-cakrda/gitlit"

[dependencies]
maud = { version = "0.27.0", features = ["actix-web"] }
git-http-backend = { git = "https://github.com/adam-cakrda/git-http-backend.git" }
actix-web = "4.11.0"
clap = { version = "4.5.46", features = ["derive"] }
tokio = "1.47.1"
tracing-subscriber = "0.3.20"
async-trait = "0.1.89"
log = "0.4.27"
tracing = "0.1.41"
http-auth-basic = "0.3.5"
thiserror = "2.0.16"
time = "0.3.42"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.2"
mongodb = "3.2.5"
serde = { version = "1.0.219", features = ["derive"] }
bcrypt = "0.17.1"
git2 = "0.20.2"
serde_json = "1.0.142"
base64 = "0.22.1"
futures-util = "0.3.31"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
actix-files = "0.6.7"
pulldown-cmark = "0.13.0"
ammonia = "4.1.1"
once_cell = "1.21.3"

