[package]
name = "GitLit"
version = "0.7.3"
edition = "2024"
authors = ["adam-cakrda <cakrda@outlook.cz>"]
license = "MIT"
repository = "https://github.com/adam-cakrda/gitlit"
description = "A simple github alternative written in rust"
keywords = ["git", "http", "backend", "server", "github"]
readme = "README.md"
homepage = "https://github.com/adam-cakrda/gitlit"

[dependencies]
maud = { version = "0.27.0", features = ["actix-web"] }
git-http-backend = { git = "https://github.com/adam-cakrda/git-http-backend.git" }
actix-web = "4.12"
clap = { version = "4.5", features = ["derive"] }
tokio = "1.49"
tracing-subscriber = "0.3"
async-trait = "0.1"
log = "0.4"
tracing = "0.1"
http-auth-basic = "0.3"
thiserror = "2.0"
time = "0.3"
uuid = { version = "1.20", features = ["v4"] }
mongodb =  { version = "3.5", features = ["bson-3"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.18"
git2 = "0.20"
serde_json = "1"
base64 = "0.22"
futures-util = "0.3"
utoipa = "5.4"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
actix-files = "0.6"
ammonia = "4.1"
once_cell = "1"
comrak = "0.50"
zip = "7.4"
dotenvy = "0.15"
bson = { version = "3.1" }
reqwest = { version = "0.13", features = ["json", "rustls"] }

[build-dependencies]
grass = "0.13"